Add Database read method and BeverageCollection class

--- a/assignment1/assignment1.csproj
+++ b/assignment1/assignment1.csproj
@@ -32,8 +32,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,6 +50,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Beverage.cs">
+      <DependentUpon>BeverageDBContext.tt</DependentUpon>
+    </Compile>
+    <Compile Include="BeverageCollection.cs" />
+    <Compile Include="BeverageDBContext.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BeverageDBContext.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="BeverageDBContext.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BeverageDBContext.tt</DependentUpon>
+    </Compile>
+    <Compile Include="BeverageDBContext.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BeverageDBContext.edmx</DependentUpon>
+    </Compile>
     <Compile Include="CSVProcessor.cs" />
     <Compile Include="IWineCollection.cs" />
     <Compile Include="Program.cs" />
@@ -51,6 +79,27 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <EntityDeploy Include="BeverageDBContext.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>BeverageDBContext.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="BeverageDBContext.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>BeverageDBContext.edmx</DependentUpon>
+      <LastGenOutput>BeverageDBContext.Context.cs</LastGenOutput>
+    </None>
+    <None Include="BeverageDBContext.edmx.diagram">
+      <DependentUpon>BeverageDBContext.edmx</DependentUpon>
+    </None>
+    <None Include="BeverageDBContext.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>BeverageDBContext.edmx</DependentUpon>
+      <LastGenOutput>BeverageDBContext.cs</LastGenOutput>
+    </None>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
