Adds an AddBeverage, SearchBeverage method. Updates UI. Adds BeverageItem Class

--- a/assignment1/assignment1.csproj
+++ b/assignment1/assignment1.csproj
@@ -69,6 +69,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>BeverageDBContext.edmx</DependentUpon>
     </Compile>
+    <Compile Include="BeverageItem.cs" />
     <Compile Include="CSVProcessor.cs" />
     <Compile Include="IWineCollection.cs" />
     <Compile Include="Program.cs" />
